<?xml version="1.0"?>
<package format="2">

  <name>lslidar_c8_decoder</name>
  <version>1.0.0</version>
  <description>
    Point cloud conversions for Leishen C8 LIDARs.
  </description>
  <maintainer email="support@lslidar.com">leo</maintainer>
  <author>leo</author>
  <license>Licensed under the Apache License, Version 2.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>

  <depend>lslidar_c8_msgs</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_lslidar_c8_decoder.xml"/>
  </export>
</package>
