<package>

  <name>lslidar_c8_driver</name>
  <version>2.0.0</version>
  <description>
    ROS device driver for Leishen C8 lidar.
  </description>
  <maintainer email="yutongyan@lslidar.com">yutongyan</maintainer>
  <author>yutongyan</author>
  <license>Licensed under the Apache License, Version 2.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_updater</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>lslidar_c8_msgs</build_depend>

  <run_depend>diagnostic_updater</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>lslidar_c8_msgs</run_depend>

 <export>
    <nodelet plugin="${prefix}/nodelet_lslidar_c8.xml"/>
  </export>
</package>
